@@ -90,7 +90,7 @@ class reader_admin_reports_bookdetailed_table extends reader_admin_reports_table
                                     'sortfields'  => array());
 
     /** @var actions */
-    protected $actions = array('deleteattempts', 'restoreattempts', 'updatepassed', 'updatecheated');
+    protected $actions = array('deleteattempts', 'restoreattempts', 'updatepassed', 'updatecheated', 'sendmessage');
 
     ////////////////////////////////////////////////////////////////////////////////
     // functions to extract data from $DB                                         //
