@@ -1003,6 +1003,34 @@ class reader_admin_reports_table extends reader_admin_table {
     }
 
     /**
+     * display_action_settings_sendmessage
+     *
+     * @param string $action
+     * @return xxx
+     */
+    public function display_action_settings_sendmessage($action) {
+        $settings = '';
+
+        $name = $action.'subject';
+        $value = optional_param($name, '', PARAM_TEXT);
+        $settings .= get_string('subject', 'forum').': ';
+        $params = array('name' => $name, 'value' => $value, 'type' => 'text', 'size' => 44);
+        $params += $this->display_action_onclickchange($name, 'onchange');
+        $settings .= html_writer::empty_tag('input', $params);
+
+        $settings .= html_writer::empty_tag('br');
+
+        $name = $action.'message';
+        $value = optional_param($name, '', PARAM_TEXT);
+        $settings .= get_string('message', 'forum').': ';
+        $params = array('name' => $name, 'rows' => 2, 'cols' => 44);
+        $params += $this->display_action_onclickchange($name, 'onchange');
+        $settings .= html_writer::tag('textarea', $value, $params);
+
+        return $this->display_action_settings($action, $settings);
+    }
+
+    /**
      * execute_action_deleteattempts
      *
      * @param string $action
@@ -1057,5 +1085,62 @@ class reader_admin_reports_table extends reader_admin_table {
         $select = 'readerid = ?';
         $params = array($this->output->reader->id);
         return $this->execute_action_update('id', $table, $field, $value, $select, $params);
+    }
+
+    /**
+     * execute_action_sendmessage
+     *
+     * @param string $action
+     * @return xxx
+     */
+    public function execute_action_sendmessage($action) {
+        global $DB, $USER;
+
+        // get subject
+        $subject = optional_param($action.'subject', '', PARAM_TEXT);
+        if (trim($subject)=='') {
+            return false; // no subject
+        }
+
+        $message = optional_param($action.'message', '', PARAM_TEXT);
+        if (trim($message)=='') {
+            return false; // no message
+        }
+
+        // get selected userids, either directly from "usersummary" report
+        // or via attempt ids from "userdetailed" or "bookdetailed" report
+        if ($userids = $this->get_selected('userid')) {
+            list($select, $params) = $this->select_sql_users();
+            $userids = array_intersect($userids, $params);
+        } else if ($ids = $this->get_selected('id')) {
+            list($select, $params) = $DB->get_in_or_equal($ids);
+            $select = "id $select AND readerid = ?";
+            $params[] = $this->output->reader->id;
+            if ($userids = $DB->get_records_select_menu('reader_attempts', $select, $params, '', 'id,userid')) {
+                $userids = array_values(array_unique($userids));
+            }
+        }
+
+        if (empty($userids)) {
+            return false; // no (valid) userids selected
+        }
+
+        // send message to selected users userids
+        $sentmessage = 0;
+        foreach ($userids as $userid) {
+            if ( ! $user = $DB->get_record('user', array('id' => $userid))) {
+                continue; // invalid userid - shouldn't happen !!
+            }
+            if (! email_to_user($user, $USER, $subject, $message)) {
+                continue; // email problems - shouldn't happen !!
+            }
+            $sentmessage++;
+        }
+
+        // send confirmation message to browser
+        if ($sentmessage) {
+            $sentmessage = get_string('sentmessage', 'mod_reader', $sentmessage);
+            echo $this->output->notification($sentmessage, 'notifysuccess');
+        }
     }
 }
