@@ -843,7 +843,7 @@ $string['selectsomeusers'] = 'Select one or more users';
 $string['selectthisquiz'] = 'Select this quiz';
 $string['sendemailtostudent'] = 'Send email to student';
 $string['sendemailtoteacher'] = 'Send email to teacher';
-$string['sendmessage'] = 'Send message to selected students';
+$string['sendmessage'] = 'Send message to affected students';
 $string['sentemailmoodle'] = 'An email has been sent via Moodle to: {$a->email}';
 $string['sentemailphp'] = 'An email has been sent via PHP mail to: {$a->email}';
 $string['sentmessage'] = 'The message was successfully sent to {$a} user(s)';
