@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2019-11-20 (26)
+ - add 'Send message' action to 'Students (full)' and 'Books (full)' reports
+
 2019-11-13 (25)
  - fix behavior of download button on 'Edit books (Site)' page
 
